...
                      const SizedBox(height: 10),
                      ElevatedButton(
                        onPressed: () {
                          _updateValueAndClose(
                              context, localController, controller, isDouble);
                        },
                        child: const Text('Done'),
                      ),
                    ],
                  ),
                ),
              ),
            ),
...
                  const SizedBox(height: 20),
                  if (!_isAddingNewExercise)
                    Row(
                      children: [
                        ElevatedButton(
                          onPressed: _addOrUpdateExercise,
                          child: const Text('Save'),
                        ),
                        if (_selectedLoggingType == 'Exercise' &&
                            _timeSinceLastExercise.isNotEmpty) ...[
                          const SizedBox(width: 10),
                          Icon(Icons.timer,
                              color: Theme.of(context).colorScheme.primary),
...
        Row(
          children: [
            if (!_isAddingNewExercise)
              Expanded(
                child: DropdownButtonFormField<String>(
                  value: _selectedExercise,
                  hint: const Text('Select an exercise'),
                  items: _predefinedExercises.map((exercise) {
                    return DropdownMenuItem<String>(
                      value: exercise,
                      child: Text(exercise),
                    );
                  }).toList(),
...
        ),
        const SizedBox(height: 20),
        if (!_isAddingNewExercise) ...[
          // Weight Input
          _buildNumberInput(
            controller: _weightController,
            label: 'Weight (${widget.isKg ? 'kg' : 'lbs'})',
            isDouble: true,
            validator: (value) {
              if (value == null || value.isEmpty) {
                return 'Please enter a weight';
              }
              return null;
            },
          ),
          const SizedBox(height: 20),
          // Reps Input
          _buildNumberInput(
            controller: _repsController,
            label: 'Reps',
            isDouble: false,
            validator: (value) {
              if (value == null || value.isEmpty) {
                return 'Please enter the number of reps';
              }
              return null;
            },
          ),
          const SizedBox(height: 20),
          // Sets Input
          _buildNumberInput(
            controller: _setsController,
            label: 'Sets',
            isDouble: false,
            validator: (value) {
              if (value == null || value.isEmpty) {
                return 'Please enter the number of sets';
              }
              return null;
...
