const List<String> predefinedVariables = [
  "Benchpress",
  "Pull-up",
  "Squats",
  "Curls (z-bar)",
  "Curls (manuals)",
  "Deadlift",
  "Leg extension",
  "Hamstring curl"
];

const int dropdownVisibleItemCount = 5;
