List<Map<String, int>> predefinedExercises = [
  {"Benchpress": 0},
  {"Pull-up": 1},
  {"Squats": 0},
  {"Curls (z-bar)": 0},
  {"Curls (dumbbells)": 0},
  {"Deadlift": 0},
  {"Leg Extension": 0},
  {"Hamstring Curl": 0},
  {"Hip Thrust": 0},
  {"Seated Calf Raises": 0},
  {"Shoulder Press (dumbbells)": 0},
  {"Shoulder Press (bar)": 0},
  {"Front Raises (dumbbells)": 0},
  {"Lateral Raises (dumbbells)": 0},
  {"Scull Crush (z-bar)": 0},
  {"Dips": 1},
  {"Flies (dumbbells)": 0},
  {"Incline Press (dumbbells)": 0},
  {"Incline Press (bar)": 0},
  {"Bulgarian Split (dumbbells)": 0},
  {"Sit-Up": 0}
];
