appId: com.andreped.IronFlow
---
- tapOn:
    point: 50%,17%
- tapOn: Deadlift
- tapOn:
    point: 50%,23%
- tapOn: Weight
- inputText: 90
- tapOn: Scrim
