appId: com.andreped.IronFlow
---
- clearState
- launchApp
- tapOn: .*Exercise.*
- tapOn: .*Deadlift.*
- tapOn: .*Weight.*
- inputText: "100"
- tapOn:
    point: 50%,23%
- tapOn: .*Reps.*
- inputText: "8"
- tapOn:
    point: 50%,23%
- tapOn: .*Sets.*
- inputText: "3"
- tapOn: .*Done.*
- tapOn: .*Save Changes.*
- assertVisible: .*Exercise Added Successfully.*

- tapOn: .*Weight.*
- inputText: "80"
- tapOn: .*Done.*
- tapOn: .*Save Changes.*
- assertVisible: .*Exercise Added Successfully.*

- tapOn: .*Weight.*
- inputText: "120"
- tapOn: .*Done.*
- tapOn: .*Save Changes.*
- assertVisible: .*New high score.*
